--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class="container">
 				<h1> Business lawyers </h1>
 				<h2> Book a free appointment and get legal advice from the best lawyers in Paris</h2>
-				<a href="#" class="btn-blue">Msake an appointment</a>
+				<a href="#" class="btn-blue">Make an appointment</a>
 			</div>
 		</div>
 		
